# project-status-1

devel/: setup.bash
devel/lib/example/: experimentalControl.py
src/example/: CMakeLists.txt
src/example/project_1/task_1/: NodeNetwork.py  path_planning_create.py  road_network.sav  route_create.py  route_network_create.py
src/example/project_1/task_2/: localization_with_kalman_filter.py
src/example/project_1/task_3/: path_planning.py
src/example/project_1/task_5/web_interface/: package-lock.json  package.json
src/example/project_1/task_5/web_interface/public/: index.html
src/example/project_1/task_5/web_interface/public/js/: eventemitter2.min.js  ros2d.js  roslib.js
src/example/project_1/task_5/web_interface/src/: App.js
src/example/project_1/task_5/web_interface/src/components/: Camera.jsx  Information.jsx  Map.jsx  SystemMonitor.jsx
src/example/project_1/task_5/web_interface/src/scenes/dashboard/: index.jsx
src/example/project_1/task_5/web_interface/src/scenes/global/: Sidebar.jsx
